Clear chrome://device-log when clearing browsing history

This log contains events which are indirectly related to user activity
and so should be cleared when the user requests that the browser delete
this data.

Bug: 826490
Change-Id: Ief8bdf0985ade4fe47084991e599aef5322003c4
Reviewed-on: https://chromium-review.googlesource.com/984718
Reviewed-by: Christian Dullweber <dullweber@chromium.org>
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Commit-Queue: Reilly Grant <reillyg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546912}
Former-commit-id: ae9ee335863f842e76534bb24867928a63500290